--- a/data/config.json
+++ b/data/config.json
@@ -32,12 +32,12 @@
     "unix_file_perm": "",
     "enable_h2c": false
   },
-  "temp_dir": "D:\\Users\\34055\\GolandProjects\\alist\\data\\temp",
-  "bleve_dir": "D:\\Users\\34055\\GolandProjects\\alist\\data\\bleve",
+  "temp_dir": "data\\temp",
+  "bleve_dir": "data\\bleve",
   "dist_dir": "",
   "log": {
     "enable": true,
-    "name": "D:\\Users\\34055\\GolandProjects\\alist\\data\\log\\log.log",
+    "name": "data\\log\\log.log",
     "max_size": 50,
     "max_backups": 30,
     "max_age": 28,
